--- a/output/refs.bib
+++ b/output/refs.bib
@@ -42,3 +42,9 @@
 	year = 2006,
 	edition = "3rd"
 }
+@book{pryce,
+	author = "John D. Pryce",
+	title = "Functional Analysis",
+	publisher = "Hutchinson and Co",
+	year = 1973
+}
